[package]
name = "ImprovedLurk"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.42", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tracing = { version = "0.1.41", features = ["log"] }
tracing-config = "0.2.2"
tracing-subscriber = "0.3.19"
